# keycap_designer

./: .gitignore  ChangeLog.md  MANIFEST.in  ReadMe.md  pyproject.toml
.github/workflows/: wheel.yml
content/: all_available_junana.py  all_available_xda.py  tutorial_1.py  tutorial_2.py  tutorial_3.py  tutorial_junana.py
keycap_designer/: __init__.py  __main__.py  color_management.py  constants.py  image.py  manuscript.py  overwrite_reportlab.py  preview.py
keycap_designer/profile/: __init__.py  junana.py  xda.py
packaging/: app.bat  app.sh  edit.sh  keycap-designer.spec  osx.sh  settings.json  win.bat
tests/: common.py  test_color_management.py  test_layout.py  test_manuscript.py  test_preview.py
tests/oracle/: generate_map.txt
