[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "keycap-designer"
description = "Keycap Designer for DecentKeyboards' Custom Keycaps"
requires-python = ">=3.11"
readme = "ReadMe.md"
license = "MIT"
classifiers = [
    'Development Status :: 3 - Alpha',
    "Environment :: Console",
    "Intended Audience :: Developers",
    'Operating System :: MacOS :: MacOS X',
    'Operating System :: Microsoft :: Windows',
    'Programming Language :: Python',
]
dynamic = ["version"]
dependencies = [
    "pillow==11.2.1",
    "opencv-python==4.11.0.86",
    "frozendict==2.4.6",
    "reportlab==4.4.2",
    "cmm-16bit==0.1.5",
    "ordered_enum==0.0.9",
    "prompt_toolkit==3.0.51",
    "pykle_serial==0.1.1",
    "scikit-image==0.25.2",
    "safetensors==0.5.3",
    "pikepdf==9.9.0",
    "mslex==1.3.0"
]

[project.urls]
Repository = "https://github.com/hajimen/keycap_designer"

[project.scripts]
keycap-designer = "keycap_designer.__main__:main"

[tool.setuptools_scm]
write_to = "keycap_designer/_version.py"

[project.optional-dependencies]
test = ["pdf2image"]

[tool.setuptools.package-dir]
"keycap_designer" = "keycap_designer"
"keycap_designer.repo.content" = "content"
"keycap_designer.repo.font" = "font"
"keycap_designer.repo.layout" = "layout"
"keycap_designer.repo.vscode" = "vscode"
